[gd_scene load_steps=3 format=3 uid="uid://c4p18sakcs8y4"]

[ext_resource type="Script" uid="uid://dafhfdjpk8wyn" path="res://script/win_screen.gd" id="1_l2arl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_win"]
bg_color = Color(0.08, 0.06, 0.12, 0.95)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 0.85, 0.3, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="Win_Screen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_l2arl")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.015, 0.03, 0.9)

[node name="Panel" type="Panel" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_win")

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 42
text = "üèÜ VICTORY! üèÜ"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="ColorRect/Panel/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
theme_override_font_sizes/font_size = 18
text = "‚è± Time: 00:00.00"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.7, 0.85, 1, 1)
theme_override_font_sizes/font_size = 14
text = "üíÄ Deaths: 0
üí∞ Coins Earned: 0"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="ColorRect/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="RESTART" type="Button" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.4, 1, 0.4, 1)
theme_override_font_sizes/font_size = 22
text = "‚ü≥ RESTART"

[connection signal="pressed" from="ColorRect/Panel/VBoxContainer/RESTART" to="." method="_on_restart_pressed"]
